--- a/mentor_link/app_mentorlink/templates/signup.html
+++ b/mentor_link/app_mentorlink/templates/signup.html
@@ -9,66 +9,64 @@
     {% csrf_token %}
 
     <div>
-        <label for="id_username">Nom d'utilisateur:</label>
-        {{ form.username }}
-        {{ form.username.errors }}
-    </div>
+          <label for="id_username">Nom d'utilisateur:</label>
+          {{ form.username }}
+          {{ form.username.errors }}
+      </div>
+  
+      <div>
+          <label for="id_password1">Mot de passe:</label>
+          {{ form.password1 }}
+          {{ form.password1.errors }}
+      </div>
+  
+      <div>
+          <label for="id_password2">Confirmer le mot de passe:</label>
+          {{ form.password2 }}
+          {{ form.password2.errors }}
+      </div>
+        
+      <div>
+          <label for="id_civilite">Email:</label>
+          {{ form.email }}
+          {{ form.email.errors }}
+      </div>
+    
+      <div>
+          <label for="id_nom">Nom:</label>
+          {{ form.last_name }}
+          {{ form.last_name.errors }}
+      </div>
 
-    <div>
-        <label for="id_email">Email:</label>
-        {{ form.email }}
-        {{ form.email.errors }}
-    </div>
+      <div>
+          <label for="id_prenom">Prénom:</label>
+          {{ form.first_name }}
+          {{ form.first_name.errors }}
+      </div>
 
-    <div>
-        <label for="id_password1">Mot de passe:</label>
-        {{ form.password1 }}
-        {{ form.password1.errors }}
-    </div>
+      <div>
+          <label for="id_age">Âge:</label>
+          {{ form.age }}
+          {{ form.age.errors }}
+      </div>
 
-    <div>
-        <label for="id_password2">Confirmer le mot de passe:</label>
-        {{ form.password2 }}
-        {{ form.password2.errors }}
-    </div>
+      <div>
+          <label for="id_civilite">Civilité:</label>
+          {{ form.civilite }}
+          {{ form.civilite.errors }}
+      </div>
 
-    <div>
-        <label for="id_nom">Nom:</label>
-        {{ form.last_name }}
-        {{ form.last_name.errors }}
-    </div>
-
-    <div>
-        <label for="id_prenom">Prénom:</label>
-        {{ form.first_name }}
-        {{ form.first_name.errors }}
-    </div>
-
-    <div>
-        <label for="id_age">Âge:</label>
-        {{ form.age }}
-        {{ form.age.errors }}
-    </div>
-
-    <div>
-        <label for="id_civilite">Civilité:</label>
-        {{ form.civilite }}
-        {{ form.civilite.errors }}
-    </div>
-
-    <div>
-        <label for="id_adresse">Adresse:</label>
-        {{ form.adresse }}
-        {{ form.adresse.errors }}
-    </div>
-
-    <div>
-        <label for="id_role">Rôle:</label>
-        {{ form.role }}
-        {{ form.role.errors }}
-    </div>
+      <div>
+          <label for="id_adresse">Adresse:</label>
+          {{ form.adresse }}
+          {{ form.adresse.errors }}
+      </div>
 
     <button type="submit">S'inscrire</button>
 </form>
+    
+{% if form.errors %}
+    <p style="color: red;">Veuillez corriger les erreurs ci-dessus.</p>
+{% endif %}
 
 {% endblock %}
