--- a/mentor_link/app_mentorlink/templates/profil.html
+++ b/mentor_link/app_mentorlink/templates/profil.html
@@ -20,22 +20,14 @@
             </select>
         </div>
         
-        <div>
-            <label for="id_role">Rôle :</label>
-            <select id="id_role" name="role">
-                <option value="Mentor" {% if user.role == "Mentor" %}selected{% endif %}>Mentor</option>
-                <option value="Mentoré" {% if user.role == "Mentoré" %}selected{% endif %}>Mentoré</option>
-            </select>
-        </div>
-        
         <div class="form-group">
             <label>Nom *</label>
-            <input type="text" name="nom" value="{{ user.nom }}">
+            <input type="text" name="nom" value="{{ user.last_name }}">
         </div>
         
         <div class="form-group">
             <label>Prénom *</label>
-            <input type="text" name="prenom" value="{{ user.prenom }}">
+            <input type="text" name="prenom" value="{{ user.first_name }}">
         </div>
         
         <div class="form-group">
@@ -60,10 +52,5 @@
         </div>
     </form>
 </section>
-
-<form action="{% url 'logout' %}" method="post" style="display: inline;">
-    {% csrf_token %}
-    <button type="submit" class="btn btn-danger">Déconnexion</button>
-</form>
     
 {% endblock %}
