--- a/mentor_link/app_mentorlink/templates/profil.html
+++ b/mentor_link/app_mentorlink/templates/profil.html
@@ -31,8 +31,8 @@
         </div>
         
         <div class="form-group">
-            <label>Date de naissance *</label>
-            <input type="text" name="naissance" value="{{ user.age }}">
+            <label>Date de naissance*</label>
+            <input type="date" name="date_naissance" value="{{ user.date_naissance|date:'Y-m-d' }}">
         </div>
         
         <h3>Adresse</h3>
