messagerie en live

--- a/mentor_link/app_mentorlink/templates/home.html
+++ b/mentor_link/app_mentorlink/templates/home.html
@@ -26,6 +26,8 @@
                     {% else %}
                         Utilisateur inconnu
                     {% endif %}<br>
+
+                    <a href="{% url 'annonce_detail' annonce.id %}" class="btn btn-primary mt-2">Voir l'annonce</a>
                 </div>
             </li>
             <hr>
