--- a/mentor_link/app_mentorlink/templates/base.html
+++ b/mentor_link/app_mentorlink/templates/base.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/> 
     <title>{% block title %}Mentorlink - Page d'accueil{% endblock %}</title>  
-    <script src="https://unpkg.com/htmx.org@1.9.3"></script>
+    <script src="https://unpkg.com/htmx.org@1.9.10"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -172,6 +173,24 @@
             font-size: 0.8em;
             color: #555;
         }
+        .card {
+            border-radius: 15px;
+            background: #ffffff;
+            color: #333;
+        }
+        .btn-orange {
+            background-color: #ff9800;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 5px;
+            color: white;
+        }
+        .btn-orange:hover {
+            background-color: #e68900;
+        }
+        h2 {
+            font-weight: bold;
+        }
     </style>
 </head>
 <body>
@@ -193,12 +212,13 @@
                 <a href="{% url 'depose_annonce' %}" style="text-decoration: none; color: inherit;">
                         Déposer une annonce
                 </a>
+                <a href="{% url 'mes_annonces' %}" style="text-decoration: none; color: inherit;">
+                    Mes annonces
+                </a>
                 
                 
             
-                <a href="{% url 'conversation_list' %}" style="text-decoration: none; color: inherit;">
-                    Messages
-                </a>
+                
                 <a href="{% url 'profil' %}" style="text-decoration: none; color: inherit;">
                     Profil
                 </a>
