modification du renvoie du bouton vers mes annonces et pas annonces de moi-même

--- a/mentor_link/app_mentorlink/templates/annonce_detail.html
+++ b/mentor_link/app_mentorlink/templates/annonce_detail.html
@@ -41,7 +41,7 @@
                     <div class="d-flex flex-wrap gap-2 mb-3">
                         <a href="{% url 'modifier_annonce' annonce.id %}" class="btn btn-outline-primary">Modifier l'annonce</a>
                         <a href="{% url 'supprimer_annonce' annonce.id %}" class="btn btn-danger">Supprimer l'annonce</a>
-                        <a href="{% url 'annonces_utilisateur' annonce.id_personnes.id %}" class="text-decoration-none">
+                        <a href="{% url 'mes_annonces' %}" class="text-decoration-none">
                             Voir toutes mes annonces
                         </a>
                     </div>
