--- a/mentor_link/app_mentorlink/templates/login.html
+++ b/mentor_link/app_mentorlink/templates/login.html
@@ -4,9 +4,12 @@
 
 {% block content %}
 
+
+
 <h2>Log In</h2>
-<form method="post" action="{% url 'login' %}">
+<form method="post">
     {% csrf_token %}
+    <input type="hidden" name="next" value="{{ next }}" />
     {{ form.as_p }}
     <button type="submit">Se connecter</button>
 </form>
