--- a/mentor_link/app_mentorlink/templates/login.html
+++ b/mentor_link/app_mentorlink/templates/login.html
@@ -1,4 +1,4 @@
-{% extends "home_nonconnecte.html" %}
+{% extends "home.html" %}
 
 {% block title %}Mentorlink - Liste des annonces{% endblock %}
 
